--- a/styles/style.css
+++ b/styles/style.css
@@ -1,37 +1,43 @@
 /* UNIVERSAL PROPERTIES  */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /* HEADER PROPERTIES  */
-/* NAVBAR  */   
-nav{
+/* NAVBAR  */
+nav {
     height: 10vh;
     background-color: #ACA6A680;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.nav-logo img{
+
+.nav-logo img {
     cursor: pointer;
 }
-.nav-main ul{
+
+.nav-main ul {
     display: flex;
     list-style: none;
     gap: 20px;
 }
-.nav-main ul li{
+
+.nav-main ul li {
     font-size: 1.2rem;
     cursor: pointer;
 }
-.nav-main ul li:hover{
+
+.nav-main ul li:hover {
     color: #F52C2C;
 }
+
 /* BANNER SECTION  */
-.banner-section{
+.banner-section {
     height: 90vh;
-    background:url("../asset/image/background.jpg"),linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));
+    background: url("../asset/image/background.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6));
     background-blend-mode: overlay;
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,30 +46,133 @@ nav{
     align-items: center;
     text-align: center;
 }
-.banner-contents{
+
+.banner-contents {
     width: 70%;
 }
-.banner-contents h1{
+
+.banner-contents h1 {
     font-size: 5.5rem;
     color: white;
 }
-.primary-color{
+
+.primary-color {
     color: #F52C2C;
 }
-.banner-contents p{
+
+.banner-contents p {
     color: white;
     font-size: 1.5rem;
     padding: 25px;
 }
-.banner-contents .btn{
+
+.banner-contents .btn {
     padding: 12px 30px;
     color: black;
     font-size: 1.3rem;
     border: none;
     cursor: pointer;
 }
-.redbtn{
+
+.redbtn {
     background-color: #F52C2C;
     color: white;
     margin-right: 10px;
+}
+
+/* SERVICES SECTION  */
+.services-section {
+    height: 100vh;
+    background: url("../asset/image/footer-bg.png"), linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95));
+    background-blend-mode: overlay;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    gap: 50px;
+}
+
+.services-list {
+    padding: 40px;
+}
+
+.services-list button {
+    padding: 12px 25px;
+    background-color: #fff;
+    border-radius: 25px;
+    color: grey;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+}
+
+.services-list h2 {
+    font-size: 2.5rem;
+    color: rgb(187, 181, 181);
+    margin-top: 10px;
+}
+
+.services-list p {
+    color: rgb(231, 222, 222);
+    font-size: 1.3rem;
+    margin-top: 15px;
+}
+
+.services-list ol {
+    margin-top: 25px;
+    padding-left: 20px;
+}
+
+.services-list li {
+    font-size: 1rem;
+    color: rgb(221, 212, 212);
+
+}
+.author{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
+.author-details{
+    display: flex;
+    /* justify-content: ; */
+    align-items: center;
+    gap: 10px;
+    width: 50%;
+    border-right: 1px solid #F52C2C;
+}
+.author-details img{
+    width: 75px;
+    border-radius: 50%;
+}
+.author-details h5{
+    color:white;
+    font-size: 1rem;
+}
+.author-button{
+    padding-right: 20px;
+}
+.services-boxes{
+    display: flex;
+    gap: 10px;
+    padding-top: 10px;
+}
+.box{
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+.box img{
+    width: 100px;
+    margin-bottom: 10px;
 }
