--- a/styles/style.css
+++ b/styles/style.css
@@ -269,7 +269,7 @@ nav {
 
 .blogbox img {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .blogbox h3 {
@@ -281,3 +281,58 @@ nav {
     font-size: 1.1rem;
     padding: 0px 20px 30px 20px;
 }
+
+/* FOOTER SECTION  */
+footer {
+    width: 100%;
+    height: 70vh;
+    background: url("../asset/image/footer-bg.png"), linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95));
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    color: white;
+    line-height: 1.8em;
+
+}
+
+.footer-container {
+    display: flex;
+    width: 75%;
+    height: 60vh;
+    margin: 0 auto;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid gray;
+}
+
+.logo-box {
+    width: 25%;
+}
+
+.logo-box img {
+    width: 170px;
+}
+
+.copy {
+    text-align: center;
+    padding: 15px;
+}
+
+.fa-solid {
+    margin-right: 7px;
+}
+
+.footer-title {
+    margin-bottom: 30px;
+}
+
+.icons {
+    margin-top: 20px;
+}
+
+.fa-brands {
+    margin: 10px;
+    font-size: 20px;
+}
+
+/* CODED FULLY BY SAJEED ANINDA EXCEPT THE *FOOTER SECTION* WHICH IS TAKEN BY THE SOURCE ITSELF. 
+All Rights Reserved by: https://github.com/gias-uddin-swe/digital-agency */
